--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <p>This is a new repo</p>
-  <p>This is a new feature</p>
+  <p>This is a new feature (buttton) </p>
 </body>
 </html>
